--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "papi",
   "version": "1.0.0",
   "dependencies": {
+    "body-parser": "^1.19.2",
     "dotenv": "^16.0.0",
     "express": "^4.17.3"
   }
