--- a/package.json
+++ b/package.json
@@ -2,8 +2,12 @@
   "name": "papi",
   "version": "1.0.0",
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "body-parser": "^1.19.2",
     "dotenv": "^16.0.0",
-    "express": "^4.17.3"
+    "express": "^4.17.3",
+    "jsonwebtoken": "^8.5.1",
+    "mariadb": "^3.0.0",
+    "sequelize": "^6.17.0"
   }
 }
